vitrail-pg-macros/tests/ui/fail/insert_input_relation_field.stderr
error: relation field `posts` cannot be used in insert input for model `user`
  --> tests/ui/fail/insert_input_relation_field.rs:3:1
   |
 3 | / schema! {
 4 | |     name insert_schema
 5 | |
 6 | |     model user {
...  |
18 | | }
   | |_^
19 |
20 |   #[derive(InsertInput)]
   |            ----------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_assert_insert_input_type_insert_schema_user` which comes from the expansion of the derive macro `InsertInput` (in Nightly builds, run with -Z macro-backtrace for more info)
